# mcp_on_existing_fastapi

./: .dockerignore  Dockerfile  Dockerfile.dev  ELICITATION_README.md  README.md  docker-compose.yml  elicitation_demo.py  main.py  pyproject.toml  requirements.txt  test_elicitation.py
app/: __init__.py  main.py
app/api/: movie_routes.py  routes.py
app/core/: config.py  lifespan.py  logging.py  middleware.py
app/data/: movies.json
app/exceptions/: movie_exceptions.py
app/mcp/: mcp_elicitation_routes.py  mcp_routes.py  utils.py
app/models/: elicitation.py  movie.py
app/repositories/: base.py  movie_repository.py
app/services/: movie_service.py
config/: app_config.dev.yaml  app_config.prod.yaml  app_config.yaml
scripts/: generate_test_jwt.py  start_phoenix.sh  start_server.sh  stop_servers.sh
tests/: README.md  __init__.py  conftest.py  test_jwt.py  test_mcp_integration.py  test_mcp_tools.py
