[project]
name = "fastapi-mcp-app"
version = "1.0.0"
description = "FastAPI application with FastMCP integration"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.39.0",
    "python-multipart>=0.0.12",
    "fastmcp==2.14.3",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.1",
    "pydantic>=2.11.5,<3.0.0",
    "pydantic-settings>=2.9.1,<3.0.0",
    "structlog>=25.3.0",
    "PyYAML>=6.0.2",
    "cachetools>=5.3.0"
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.2.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.28.1",
    "mypy>=1.11.0",
    "types-python-jose>=3.3.4.3",
    "types-passlib>=1.7.5.20230806"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py310"
